tests/e2e/nested_service_block3.error
Error: syntax error in story at line 2, column 10

2|        when other_service command listen
               ^^^^^^^^^^^^^^^^^^^^^

E0066: Nested when blocks are not allowed
